Fix spacing on race-day map legend

--- a/assets/stylesheets/main/race-day/race-map-legend.css.scss
+++ b/assets/stylesheets/main/race-day/race-map-legend.css.scss
@@ -3,16 +3,8 @@
 .race-map-legend {
   font-size: .9rem;
   line-height: 1rem;
-  height: 1rem;
-
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  white-space: nowrap;
-  margin-bottom: 1.5rem;
+  height: 3.5rem;
+  text-align: center;
 
   &>* {
     display: none;
@@ -24,8 +16,8 @@
   &.has-candidate-trails .candidate-trails,
   &.has-candidate-loses .candidate-loses,
   &.has-no-results .no-results {
-    display: -webkit-flex;
-    display: flex;
+    display: -webkit-inline-flex;
+    display: inline-flex;
     height: 1rem;
   }
 
